--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@reduxjs/toolkit": "^2.2.3",
     "apexcharts": "^3.47.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.3",
     "framer-motion": "^11.0.15",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-awesome-reveal": "^4.2.8",
     "react-calendar": "^4.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.3",
     "react-icons": "^5.0.1",
